Update Swagger Annotation
- logsearch.go Swagger 문서 업데이트
