# paasta-monitoring-api/src/kr/paasta/monitoring-api/docs/swagger.yaml
@@ -1585,33 +1585,49 @@ paths:
       summary: Bosh의 차트 정보를 가져온다.
       tags:
       - AP
-  /api/v1/log:
+  /api/v1/log/{uuid}:
     get:
       consumes:
       - application/json
-      description: 로그 정보를 가져온다.
+      description: |-
+        로그 정보를 가져온다.
+        대상 날짜, 시작 시간, 종료 시간을 사용하는 조회와 현재를 기준으로 특정 기간 동안의 내용을 조회하는 파라미터는 중복 사용이 불가능하다.
       parameters:
-      - description: PaaS-TA Core 별 로그 정보 조회시 VM UUID를 주입한다.
-        in: query
+      - description: 로그 조회시 대상 VM의 UUID를 주입한다.
+        example: f1db5cd8-3e5b-4980-966f-9fa88d8d85fd
+        in: path
         name: uuid
+        required: true
         type: string
-      - description: PaaS-TA Core 별 로그 정보 조회시 키워드 (keyword)를      주입한다.
+      - description: 로그 정보를 조회하고자 하는 타입을 지정한다.
+        enum:
+        - bosh
+        - cf
+        in: query
+        name: logType
+        required: true
+        type: string
+      - description: 로그 조회시 특정 내용을 포함하는 키워드 검색이 필요할 경우 사용한다.
         in: query
         name: keyword
         type: string
-      - description: PaaS-TA Core 별 로그 정보 조회시 대상날짜 (targetDate)를  주입한다.
+      - description: 로그 정보를 조회하고자 하는 대상 날짜를 주입한다.
+        example: "2022-07-28"
         in: query
         name: targetDate
         type: string
-      - description: PaaS-TA Core 별 로그 정보 조회시 시작시간 (startTime)를   주입한다.
+      - description: 로그 정보를 조회하고자 하는 시작 시간를 주입한다.
+        example: "09:00:00"
         in: query
         name: startTime
         type: string
-      - description: PaaS-TA Core 별 로그 정보 조회시 종료시간 (endTime)를     주입한다.
+      - description: 로그 정보를 조회하고자 하는 종료 시간를 주입한다.
+        example: "18:00:00"
         in: query
         name: endTime
         type: string
-      - description: PaaS-TA Core 별 로그 정보 조회시 조회기간 (period)를      주입한다.
+      - description: 로그 정보 조회시 현재를 기준으로 특정 기간 동안의 내용을 조회한다.
+        example: 10s
         in: query
         name: period
         type: string
